# crucible

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  TODO.md  crucible.yaml.example  phase1.md  playbook.md  pyproject.toml
crucible/: __init__.py  __main__.py  cli.py
crucible/agents/: prompts.py  tools.py
crucible/core/: _schema.py  config.py  hashing.py  logging.py  models.py  protocols.py  provenance.py  registry.py  units.py
crucible/data/: calibration.py  mp_client.py  seeds.py
crucible/gauntlet/: composition.py  dedup.py  geometry.py  novelty.py  parse.py  pipeline.py
crucible/generators/: base.py  crystallm.py  mattergen_colab.py  mattergen_local.py  random_baseline.py
crucible/orchestrators/: claude_tools.py  rule_based.py
crucible/predictors/: alignn.py
crucible/queues/: http_queue.py  local_queue.py
crucible/rankers/: battery_cathode.py  co2_sorbent.py  refractory_alloy.py
crucible/relaxers/: alignn_ff.py  chgnet.py  mace.py
crucible/reports/: status.py
crucible/stores/: parquet_export.py  remote_store.py  sqlite_store.py
docs/: install_alignn_macos.md
scripts/: alignn_runner.py  check_gpu.py  smoke_run.py  verify_phase1.py
tests/: test_agents_prompts.py  test_agents_tools.py  test_cli.py  test_config.py  test_gauntlet_composition.py  test_gauntlet_dedup.py  test_gauntlet_geometry.py  test_gauntlet_novelty.py  test_gauntlet_parse.py  test_gauntlet_pipeline.py  test_generators_random_baseline.py  test_hashing.py  test_logging.py  test_mp_client.py  test_orchestrator_persistence.py  test_orchestrators_claude_tools.py  test_predictors_alignn.py  test_queue.py  test_rankers_battery_cathode.py  test_registry.py  test_relaxers_alignn_ff.py  test_relaxers_chgnet.py  test_reports_status.py  test_smoke_run.py  test_store.py  test_store_extensions.py  test_units.py
